--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         position: fixed;
         left: 0;
         right: 0;
+        color: green;
         margin: auto;
         bottom: 0;
         width: fit-content;
